# parser_whales_tracker

./: .gitignore  pyproject.toml
parser_whales_tracker/: main.py
tests/: test_parser_whales_tracker.py
